2023-04 Feature Update to Version Next

--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item">
             <div class="portfolio-wrap">
-              <img src="https://i.imgur.com/snZqYJ3.png" class="img-fluid" alt="">
+              <img src="assets/img/the-problem/idenM.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Identity</h4>
+                <h4>Identify</h4>
                 <div class="portfolio-links">
-                  <a href="worksbynrfz/mrt-signage-rep-s2.html" class="portfolio-details-lightbox"
+                  <a href="the-problem/identify.html" class="portfolio-details-lightbox"
                     data-glightbox="type: external" title="Work Details"><i class="bi bi-arrow-right-circle-fill"></i></a>
                 </div>
               </div>
@@ -126,215 +126,31 @@
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-wd">
+          <div class="col-lg-4 col-md-6 portfolio-item">
             <div class="portfolio-wrap">
-              <img src="https://i.imgur.com/dN3zoF8.png" class="img-fluid" alt="">
+              <img src="assets/img/the-problem/conM.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Wayfinding? Right this way. - Improving PT Signages</h4>
-                <p>Website Design</p>
+                <h4>Design & Development</h4>
                 <div class="portfolio-links">
-                  <a href="https://i.imgur.com/dN3zoF8.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                    title="More Replications"><i class="bi bi-zoom-in"></i></a>
-                  <a href="worksbynrfz/wayfind.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Work Details"><i class="bi bi-arrow-right-circle-fill"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-cr">
-            <div class="portfolio-wrap">
-              <img src="https://i.imgur.com/snZqYJ3.png" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>MRT Signages Concept/Replications S2</h4>
-                <p>Concepts & Replications</p>
-                <div class="portfolio-links">
-                  <a href="https://i.imgur.com/snZqYJ3.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                    title="MRT Signages Concept/Replications"><i class="bi bi-zoom-in"></i></a>
-                  <a href="worksbynrfz/mrt-signage-rep-s2.html" class="portfolio-details-lightbox"
+                  <a href="the-problem/context.html" class="portfolio-details-lightbox"
                     data-glightbox="type: external" title="Work Details"><i class="bi bi-arrow-right-circle-fill"></i></a>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-cr">
+          <div class="col-lg-4 col-md-6 portfolio-item">
             <div class="portfolio-wrap">
-              <img src="https://i.imgur.com/wXn720I.png" class="img-fluid" alt="">
+              <img src="assets/img/the-problem/obsvM.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>More Replications</h4>
-                <p>Concepts & Replications</p>
+                <h4>Virtual Prototypes</h4>
                 <div class="portfolio-links">
-                  <a href="https://i.imgur.com/wXn720I.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                    title="More Replications"><i class="bi bi-zoom-in"></i></a>
-                  <a href="worksbynrfz/more-rep.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Work Details"><i class="bi bi-arrow-right-circle-fill"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-am filter-cr">
-            <div class="portfolio-wrap">
-              <img src="https://i.imgur.com/fxrS76b.png" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>MyTransport.SG App Redesign </h4>
-                <p>App Mockups/ Concept & Replications</p>
-                <div class="portfolio-links">
-                  <a href="https://i.imgur.com/fxrS76b.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                    title="MyTransport.SG App Redesign"><i class="bi bi-zoom-in"></i></a>
-                  <a href="worksbynrfz/myts-app.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Work Details"><i class="bi bi-arrow-right-circle-fill"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-cr">
-            <div class="portfolio-wrap">
-              <img src="https://i.imgur.com/dl2R8ZY.png" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>LTA Bus PIDS Redesign</h4>
-                <p>Concepts & Replications</p>
-                <div class="portfolio-links">
-                  <a href="https://i.imgur.com/dl2R8ZY.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                    title="LTA Bus PIDS Redesign"><i class="bi bi-zoom-in"></i></a>
-                  <a href="worksbynrfz/lta-pids.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Work Details"><i class="bi bi-arrow-right-circle-fill"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-cr">
-            <div class="portfolio-wrap">
-              <img src="https://i.imgur.com/uYfevZF.png" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>MAN A22 Lion Mascot Replication</h4>
-                <p>Concepts & Replications</p>
-                <div class="portfolio-links">
-                  <a href="https://i.imgur.com/uYfevZF.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                    title="MAN A22 Lion Mascot Replication"><i class="bi bi-zoom-in"></i></a>
-                  <a href="worksbynrfz/man-a22-masc.html" class="portfolio-details-lightbox"
+                  <a href="the-problem/observations.html" class="portfolio-details-lightbox"
                     data-glightbox="type: external" title="Work Details"><i class="bi bi-arrow-right-circle-fill"></i></a>
                 </div>
               </div>
             </div>
           </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-cr">
-            <div class="portfolio-wrap">
-              <img src="https://i.imgur.com/oRcN6NQ.png" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>MRT Signages Concept/Replications S1</h4>
-                <p>Concepts & Replications</p>
-                <div class="portfolio-links">
-                  <a href="https://i.imgur.com/oRcN6NQ.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                    title="MRT Signages Concept/Replications S1"><i class="bi bi-zoom-in"></i></a>
-                  <a href="worksbynrfz/mrt-signage-rep-s1.html" class="portfolio-details-lightbox"
-                    data-glightbox="type: external" title="Work Details"><i class="bi bi-arrow-right-circle-fill"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-cr">
-            <div class="portfolio-wrap">
-              <img src="https://i.imgur.com/RDNwcvC.png" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Bus Replications</h4>
-                <p>Concepts & Replications</p>
-                <div class="portfolio-links">
-                  <a href="https://i.imgur.com/RDNwcvC.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                    title="Bus Replications"><i class="bi bi-zoom-in"></i></a>
-                  <a href="worksbynrfz/bus-rep.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Work Details"><i class="bi bi-arrow-right-circle-fill"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-wrap">
-              <img src="https://i.imgur.com/z9t4Cwl.png" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>EZ-Link Card Redesign</h4>
-                <p>Concepts & Replications</p>
-                <div class="portfolio-links">
-                  <a href="https://i.imgur.com/z9t4Cwl.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                    title="EZ-Link Card Redesign"><i class="bi bi-zoom-in"></i></a>
-                  <a href="worksbynrfz/ezlink-red.html" class="portfolio-details-lightbox"
-                    data-glightbox="type: external" title="Work Details"><i class="bi bi-arrow-right-circle-fill"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-id">
-            <div class="portfolio-wrap">
-              <img src="https://i.imgur.com/v63kyPZ.png" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>COVID-19 Shopping Habits Infographic</h4>
-                <p>Infographic Design</p>
-                <div class="portfolio-links">
-                  <a href="https://i.imgur.com/v63kyPZ.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                    title="COVID-19 Shopping Habits Infographic"><i class="bi bi-zoom-in"></i></a>
-                  <a href="worksbynrfz/igra2.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Work Details"><i class="bi bi-arrow-right-circle-fill"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-am">
-            <div class="portfolio-wrap">
-              <img src="https://i.imgur.com/MKX6hwn.png" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Food Review Compiler/Flashify - a Flashcard App </h4>
-                <p>App Mockups</p>
-                <div class="portfolio-links">
-                  <a href="https://i.imgur.com/MKX6hwn.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                    title="Food Review Compiler/Flashify - a Flashcard App"><i class="bi bi-zoom-in"></i></a>
-                  <a href="worksbynrfz/food-rev-flash-app.html" class="portfolio-details-lightbox"
-                    data-glightbox="type: external" title="Work Details"><i class="bi bi-arrow-right-circle-fill"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-id">
-            <div class="portfolio-wrap">
-              <img src="https://i.imgur.com/zDfpCEQ.png" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Infographic Resume</h4>
-                <p>Infographic Design</p>
-                <div class="portfolio-links">
-                  <a href="https://i.imgur.com/zDfpCEQ.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                    title="Infographic Resume"><i class="bi bi-zoom-in"></i></a>
-                  <a href="worksbynrfz/igra1.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Work Details"><i class="bi bi-arrow-right-circle-fill"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-ld">
-            <div class="portfolio-wrap">
-              <img src="https://i.imgur.com/1HQJOAC.png" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Friends Forever Logo Design</h4>
-                <p>Logo Design</p>
-                <div class="portfolio-links">
-                  <a href="https://i.imgur.com/1HQJOAC.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                    title="Friends Forever Logo Design"><i class="bi bi-zoom-in"></i></a>
-                  <a href="worksbynrfz/ffl.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Work Details"><i class="bi bi-arrow-right-circle-fill"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-        </div>
 
       </div>
     </section><!-- End Portfolio Section -->
