--- a/the-problem/observations.html
+++ b/the-problem/observations.html
@@ -68,9 +68,8 @@
       </div>
 
       <div class="col-md-4 portfolio-item filter-id">
-        <a href="../assets/img/prob-sol-img/lnt-1.jpg" data-gallery="portfolio-gallery"
-          class="glightbox preview-link"><img src="../assets/img/prob-sol-img/lnt-1.jpg" class="img-fluid-portfolio"
-            alt=""></a>
+        <a href="../assets/img/prob-sol-img/lnt-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><img
+            src="../assets/img/prob-sol-img/lnt-1.jpg" class="img-fluid-portfolio" alt=""></a>
         <br><br>
         <p class="contextImg-caption text-center">Fig. 3: Paper signs showing the Exit Directories
 
@@ -78,23 +77,21 @@
       </div>
 
       <div class="col-md-4 portfolio-item filter-id">
-        <a href="../assets/img/prob-sol-img/mrb-1.jpg" data-gallery="portfolio-gallery"
-          class="glightbox preview-link"><img src="../assets/img/prob-sol-img/mrb-1.jpg" class="img-fluid-portfolio"
-            alt=""></a>
+        <a href="../assets/img/prob-sol-img/mrb-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><img
+            src="../assets/img/prob-sol-img/mrb-1.jpg" class="img-fluid-portfolio" alt=""></a>
         <br><br>
         <div class="portfolio-info">
           <p class="contextImg-caption text-center">Fig. 4: Marina Bay TEL's Portable Signs telling commuters to
             use the other set of escalators to NSL. This is the same problem as the ones in woodlands TEL. <i>The signs
-            at this exact position has since been removed, weirdly.</i>
+              at this exact position has since been removed, weirdly.</i>
 
           </p>
         </div>
       </div>
 
       <div class="col-md-4 portfolio-item filter-id">
-        <a href="../assets/img/prob-sol-img/mrb-2.jpg" data-gallery="portfolio-gallery"
-          class="glightbox preview-link"><img src="../assets/img/prob-sol-img/mrb-2.jpg" class="img-fluid-portfolio"
-            alt=""></a>
+        <a href="../assets/img/prob-sol-img/mrb-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><img
+            src="../assets/img/prob-sol-img/mrb-2.jpg" class="img-fluid-portfolio" alt=""></a>
         <br><br>
         <div class="portfolio-info">
           <p class="contextImg-caption text-center">Fig. 5: Marina Bay TEL's Portable Signs showing commuters
