2023-04 Feature Update to Version Next

--- a/the-problem/context.html
+++ b/the-problem/context.html
@@ -17,6 +17,7 @@
   <link
     href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
     rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="../assets/vendor/aos/aos.css" rel="stylesheet">
@@ -39,35 +40,34 @@
     <section id="portfolio-details" class="portfolio-details">
       <div class="container">
 
-            <div class="row row-tpts">
+        <div class="row row-tpts">
 
-                <h3 class="summary-tit">Context</h3>
-                <p class="summary">
-                  The idea all started with the launch of the new Wayfinding system on the Thomson-East Coast Line
-                  stations. It spots a new design language, where the emphasis was mainly on iconographies, rather than
-                  pure texts. I for one, am a huge fan of this new design albeit it has a few minor flaws. <br><br>
+          <h3 class="summary-tit">Context</h3>
+          <p class="summary">
+            The idea all started with the launch of the new Wayfinding system on the Thomson-East Coast Line
+            stations. It spots a new design language, where the emphasis was mainly on iconographies, rather than
+            pure texts. I for one, am a huge fan of this new design albeit it has a few minor flaws. <br><br>
 
-                  While the intention sounds good on paper, the execution turned out to be unfavourable (trust me, it's
-                  still not too late to patch up stuffs), as navigating
-                  through the Interchange station with these new system, were in fact, confusing commuters more. These
-                  became evident after the opening of TEL2, where the passenger traffic grew, and people began utilising
-                  the line.<br><br>
-                  <b>Head over to the Observations tab, where you'll see what the problem is all about.</b>
-                </p>
+            While the intention sounds good on paper, the execution turned out to be unfavourable (trust me, it's
+            still not too late to patch up stuffs), as navigating
+            through the Interchange station with these new system, were in fact, confusing commuters more. These
+            became evident after the opening of TEL2, where the passenger traffic grew, and people began utilising
+            the line.<br><br>
+            <b>Head over to the Observations tab, where you'll see what the problem is all about.</b>
+          </p>
 
-              <div class="col-xl-12 portfolio-item">
-                <a href="../assets/img/prob-sol-img/nws.jpg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox"><img src="../assets/img/prob-sol-img/nws.jpg" class="img-fluid-portfolio"
-                    alt=""></a>
-                <br><br>
-                <p class="contextImg-caption text-center">Fig. 1: The New Wayfinding System - in the initial state before
-                  modifications
-                  <br><b>Photo Credits: <a
-                      href="https://eyeondesign.aiga.org/one-designers-quest-to-redesign-singapores-subway-signage/">
-                      Samuel Lim via AIGA - Eye On Design</a></b>
-                </p>
-              </div>
-            </div>
+          <div class="col-xl-12 portfolio-item">
+            <a href="../assets/img/prob-sol-img/nws.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><img
+                src="../assets/img/prob-sol-img/nws.jpg" class="img-fluid-portfolio" alt=""></a>
+            <br><br>
+            <p class="contextImg-caption text-center">Fig. 1: The New Wayfinding System - in the initial state before
+              modifications
+              <br><b>Photo Credits: <a
+                  href="https://eyeondesign.aiga.org/one-designers-quest-to-redesign-singapores-subway-signage/">
+                  Samuel Lim via AIGA - Eye On Design</a></b>
+            </p>
+          </div>
+        </div>
 
       </div>
     </section><!-- End Portfolio Details Section -->
