--- a/index.html
+++ b/index.html
@@ -128,11 +128,11 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item">
             <div class="portfolio-wrap">
-              <img src="assets/img/the-problem/conM.png" class="img-fluid" alt="">
+              <img src="assets/img/the-solution/desdevM.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Design & Development</h4>
                 <div class="portfolio-links">
-                  <a href="the-problem/context.html" class="portfolio-details-lightbox"
+                  <a href="#" class="portfolio-details-lightbox"
                     data-glightbox="type: external" title="Work Details"><i class="bi bi-arrow-right-circle-fill"></i></a>
                 </div>
               </div>
@@ -141,11 +141,11 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item">
             <div class="portfolio-wrap">
-              <img src="assets/img/the-problem/obsvM.png" class="img-fluid" alt="">
+              <img src="assets/img/the-solution/virtM.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Virtual Prototypes</h4>
                 <div class="portfolio-links">
-                  <a href="the-problem/observations.html" class="portfolio-details-lightbox"
+                  <a href="#" class="portfolio-details-lightbox"
                     data-glightbox="type: external" title="Work Details"><i class="bi bi-arrow-right-circle-fill"></i></a>
                 </div>
               </div>
