2023-04 Feature Update to Version Next

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <li><a href="#problem" class="nav-link scrollto"><i class='bx bx-question-mark'></i> <span>The Problem</span></a></li>
         <li><a href="#solution" class="nav-link scrollto"><i class='bx bx-bulb'></i><span>The Solution</span></a>
         </li>
-        <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
+        <li><a href="#about" class="nav-link scrollto"><i class='bx bxs-info-circle'></i><span>About</span></a></li>
         <li><a href="#connect" class="nav-link scrollto"><i class="bx bxs-group"></i><span>Connect</span></a></li>
       </ul>
     </nav><!-- .nav-menu -->
@@ -79,7 +79,7 @@
                 <h4>Context</h4>
                 <div class="portfolio-links">
                   <a href="the-problem/context.html" class="portfolio-details-lightbox"
-                    data-glightbox="type: external" title="Work Details"><i class="bi bi-arrow-right-circle-fill"></i></a>
+                    data-glightbox="type: external" title="Work Details"><i class='bx bxs-info-circle'></i></a>
                 </div>
               </div>
             </div>
@@ -92,7 +92,7 @@
                 <h4>Observations</h4>
                 <div class="portfolio-links">
                   <a href="the-problem/observations.html" class="portfolio-details-lightbox"
-                    data-glightbox="type: external" title="Work Details"><i class="bi bi-arrow-right-circle-fill"></i></a>
+                    data-glightbox="type: external" title="Work Details"><i class="fa-solid fa-eye no-hover"></i></a>
                 </div>
               </div>
             </div>
@@ -105,7 +105,7 @@
                 <h4>Identify</h4>
                 <div class="portfolio-links">
                   <a href="the-problem/identify.html" class="portfolio-details-lightbox"
-                    data-glightbox="type: external" title="Work Details"><i class="bi bi-arrow-right-circle-fill"></i></a>
+                    data-glightbox="type: external" title="Work Details"><i class="fa-solid fa-circle-check"></i></a>
                 </div>
               </div>
             </div>
