--- a/the-problem/context.html
+++ b/the-problem/context.html
@@ -60,7 +60,7 @@
             <a href="../assets/img/prob-sol-img/nws.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><img
                 src="../assets/img/prob-sol-img/nws.jpg" class="img-fluid-portfolio" alt=""></a>
             <br><br>
-            <p class="contextImg-caption text-center">Fig. 1: The New Wayfinding System - in the initial state before
+            <p class="contextImg-caption text-center"><mark class="figure">Fig. 1</mark>: The New Wayfinding System - in the initial state before
               modifications
               <br><b>Photo Credits: <a
                   href="https://eyeondesign.aiga.org/one-designers-quest-to-redesign-singapores-subway-signage/">
