--- a/the-problem/observations.html
+++ b/the-problem/observations.html
@@ -46,10 +46,10 @@
         escalators, one would bring you to the NSL, the middle ones would bring you to the Way Out, and the
         third one, would bring you to Exits 5-7. Many commuters would mistakenly take the middle set of
         escalators, where it only brings you to the Way Out, and not to NSL, because that is where the Faregates
-        are. Hence signages like these (Fig. 2) were placed. While useful, it looks very clunky.
+        are. Hence signages like these <mark class="figure">(Fig. 2)</mark> were placed. While useful, it looks very clunky.
 
         <br><br>The worst one was seen at Marina Bay, where
-        the portable signages, showing the NSL/CCL direction (Fig. 4). The same info can be found just by
+        the portable signages, showing the NSL/CCL direction <mark class="figure">(Fig. 4)</mark>. The same info can be found just by
         looking up, where the permanent signs were!
         Why were the portable signs necessary then?
 
@@ -61,7 +61,7 @@
         <a href="../assets/img/prob-sol-img/wdl-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><img
             src="../assets/img/prob-sol-img/wdl-1.jpg" class="img-fluid-portfolio" alt=""></a>
         <br><br>
-        <p class="contextImg-caption text-center">Fig. 2: Woodlands TEL's Portable Signs telling commuters to
+        <p class="contextImg-caption text-center"><mark class="figure">Fig. 2</mark>: Woodlands TEL's Portable Signs telling commuters to
           use
           the other set of escalators to NSL.
 
@@ -72,7 +72,7 @@
         <a href="../assets/img/prob-sol-img/lnt-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><img
             src="../assets/img/prob-sol-img/lnt-1.jpg" class="img-fluid-portfolio" alt=""></a>
         <br><br>
-        <p class="contextImg-caption text-center">Fig. 3: Paper signs showing the Exit Directories
+        <p class="contextImg-caption text-center"><mark class="figure">Fig. 3</mark>: Paper signs showing the Exit Directories
 
         </p>
       </div>
@@ -82,7 +82,7 @@
             src="../assets/img/prob-sol-img/mrb-1.jpg" class="img-fluid-portfolio" alt=""></a>
         <br><br>
         <div class="portfolio-info">
-          <p class="contextImg-caption text-center">Fig. 4: Marina Bay TEL's Portable Signs telling commuters to
+          <p class="contextImg-caption text-center"><mark class="figure">Fig. 4</mark>: Marina Bay TEL's Portable Signs telling commuters to
             use the other set of escalators to NSL. This is the same problem as the ones in woodlands TEL. <i>The signs
               at this exact position has since been removed, weirdly.</i>
 
@@ -95,7 +95,7 @@
             src="../assets/img/prob-sol-img/mrb-2.jpg" class="img-fluid-portfolio" alt=""></a>
         <br><br>
         <div class="portfolio-info">
-          <p class="contextImg-caption text-center">Fig. 5: Marina Bay TEL's Portable Signs showing commuters
+          <p class="contextImg-caption text-center"><mark class="figure">Fig. 5</mark>: Marina Bay TEL's Portable Signs showing commuters
             the
             directions to NSL/CCL.<i>The signs at this exact position has since been removed, weirdly.</i>
 
