2023-04 Feature Update to Version Next

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
               <div class="portfolio-info">
                 <h4>Design & Development</h4>
                 <div class="portfolio-links">
-                  <a href="#" class="portfolio-details-lightbox"
+                  <a href="the-solution/des-dev.html" class="portfolio-details-lightbox"
                     data-glightbox="type: external" title="Work Details"><i class="bi bi-arrow-right-circle-fill"></i></a>
                 </div>
               </div>
@@ -145,7 +145,7 @@
               <div class="portfolio-info">
                 <h4>Virtual Prototypes</h4>
                 <div class="portfolio-links">
-                  <a href="#" class="portfolio-details-lightbox"
+                  <a href="the-solution/virt-proto.html" class="portfolio-details-lightbox"
                     data-glightbox="type: external" title="Work Details"><i class="bi bi-arrow-right-circle-fill"></i></a>
                 </div>
               </div>
@@ -196,8 +196,8 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Let's Connect!</h2>
-          <p>Have questions? I'm available through these platforms.</p>
+          <h2>More about me</h2>
+          <p>View my digital resume! Besides my interest in signages, I also love doing mockups and other designs too! Check them out!</p>
         </div>
 
         <div class="row gy-5">
